5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1594_2043.log
== TEST (2019-03-26 16:23:28) 
-- CODE:
p1=input("insira o valor da p1")
p2=input("insira o valor da p2")
p3=input("insira o valor da p3")
p4=input("insira o valor da p4")

m=(p1+p2+p3+p4)/10
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    m=(p1+p2+p3+p4)/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:23:40) 
-- CODE:
p1=input("insira o valor da p1")
p2=input("insira o valor da p2")
p3=input("insira o valor da p3")
p4=input("insira o valor da p4")

m=(p1+p2+p3+p4)/10
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    m=(p1+p2+p3+p4)/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:23:43) 
-- CODE:
p1=input("insira o valor da p1")
p2=input("insira o valor da p2")
p3=input("insira o valor da p3")
p4=input("insira o valor da p4")

m=(p1+p2+p3+p4)/10
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    m=(p1+p2+p3+p4)/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:23:59) 
-- CODE:
p1=input("insira o valor da p1")
p2=input("insira o valor da p2")
p3=input("insira o valor da p3")
p4=input("insira o valor da p4")

m=(p1+p2+p3+p4)/10
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    m=(p1+p2+p3+p4)/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:24:36) 
-- CODE:
p1=int(input("insira o valor da p1"))
p2=int(input("insira o valor da p2"))
p3=int(input("insira o valor da p3"))
p4=int(input("insira o valor da p4"))

m=(p1+p2+p3+p4)/10
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    p2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:24:59) 
-- CODE:
p1=int(input("insira o valor da p1"))
p2=int(input("insira o valor da p2"))
p3=int(input("insira o valor da p3"))
p4=int(input("insira o valor da p4"))

m=(p1+p2+p3+p4)/4
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    p2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:25:08) 
-- CODE:
p1=int(input("insira o valor da p1:"))
p2=int(input("insira o valor da p2:"))
p3=int(input("insira o valor da p3:"))
p4=int(input("insira o valor da p4:"))

m=(p1+p2+p3+p4)/4
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    p2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:25:16) 
-- CODE:
p1=int(input("insira o valor da p1:"))
p2=int(input("insira o valor da p2:"))
p3=int(input("insira o valor da p3:"))
p4=int(input("insira o valor da p4:"))

m=(p1+p2+p3+p4)/4
print(round(m,2))
-- EXECUTION TIME:
0.177105
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    p2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:25:26) 
-- CODE:
p1=int(input("insira o valor da p1:"))
p2=int(input("insira o valor da p2:"))
p3=int(input("insira o valor da p3:"))
p4=int(input("insira o valor da p4:"))

m=p1+p2+p3+p4/4
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    p2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:25:53) 
-- CODE:
p1=int(input("insira o valor da p1:"))
p2=int(input("insira o valor da p2:"))
p3=int(input("insira o valor da p3:"))
p4=int(input("insira o valor da p4:"))

s=p1+p2+p3+p4
m=s/4

print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    p2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:28:03) 
-- CODE:
p1=int(input("insira o valor da p1:"))
p2=int(input("insira o valor da p2:"))
p3=int(input("insira o valor da p3:"))
p4=int(input("insira o valor da p4:"))

m=(p1*1)+(p2*2)+(p3*3)+(p4*4)/10


print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    p2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:28:29) 
-- CODE:
p1=int(input("insira o valor da p1:"))
p2=int(input("insira o valor da p2:"))
p3=int(input("insira o valor da p3:"))
p4=int(input("insira o valor da p4:"))

m=((p1*1)+(p2*2)+(p3*3)+(p4*4)/10)


print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    p2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:28:54) 
-- CODE:
p1=int(input("insira o valor da p1:"))
p2=int(input("insira o valor da p2:"))
p3=int(input("insira o valor da p3:"))
p4=int(input("insira o valor da p4:"))

m=p1*1+p2*2+p3*3+p4*4/10


print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    p2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:27) 
-- CODE:
p1=int(input("insira o valor da p1:"))
p2=int(input("insira o valor da p2:"))
p3=int(input("insira o valor da p3:"))
p4=int(input("insira o valor da p4:"))

s=p1*1+p2*2+p3*3+p4*4
m= s/10

print(round(,,2))
-- ERROR:
File "XXXX", line 9
    print(round(,,2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:33) 
-- CODE:
p1=int(input("insira o valor da p1:"))
p2=int(input("insira o valor da p2:"))
p3=int(input("insira o valor da p3:"))
p4=int(input("insira o valor da p4:"))

s=p1*1+p2*2+p3*3+p4*4
m= s/10

print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    p2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:43) 
-- CODE:
p1=int(input("insira o valor da p1:"))
p2=int(input("insira o valor da p2:"))
p3=int(input("insira o valor da p3:"))
p4=int(input("insira o valor da p4:"))

s=p1*1+p2*2+p3*3+p4*4
m= s/10

print(round(m,2))
-- EXECUTION TIME:
0.139576
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    p2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:30:02) 
-- CODE:
p1=int(input("insira o valor da p1:"))
p2=int(input("insira o valor da p2:"))
p3=int(input("insira o valor da p3:"))
p4=int(input("insira o valor da p4:"))

m=p1*1+p2*2+p3*3+p4*4/10


print(round(m,2))
-- EXECUTION TIME:
0.143485
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    p2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:30:03) 
-- CODE:
p1=int(input("insira o valor da p1:"))
p2=int(input("insira o valor da p2:"))
p3=int(input("insira o valor da p3:"))
p4=int(input("insira o valor da p4:"))

m=p1*1+p2*2+p3*3+p4*4/10


print(round(m,2))
-- EXECUTION TIME:
0.20896
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    p2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:30:12) 
-- CODE:
p1=int(input("insira o valor da p1:"))
p2=int(input("insira o valor da p2:"))
p3=int(input("insira o valor da p3:"))
p4=int(input("insira o valor da p4:"))

m=p1*1+p2*2+p3*3+p4*4 / 10


print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    p2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:30:13) 
-- CODE:
p1=int(input("insira o valor da p1:"))
p2=int(input("insira o valor da p2:"))
p3=int(input("insira o valor da p3:"))
p4=int(input("insira o valor da p4:"))

m=p1*1+p2*2+p3*3+p4*4 / 10


print(round(m,2))
-- EXECUTION TIME:
0.153582
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    p2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:30:13) 
-- CODE:
p1=int(input("insira o valor da p1:"))
p2=int(input("insira o valor da p2:"))
p3=int(input("insira o valor da p3:"))
p4=int(input("insira o valor da p4:"))

m=p1*1+p2*2+p3*3+p4*4 / 10


print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    p2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:30:31) 
-- CODE:
p1=int(input("insira o valor da p1:"))
p2=int(input("insira o valor da p2:"))
p3=int(input("insira o valor da p3:"))
p4=int(input("insira o valor da p4:"))

m=(p1*1+p2*2+p3*3+p4*4 )/ 10


print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    p2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:30:39) 
-- CODE:
p1=int(input("insira o valor da p1:"))
p2=int(input("insira o valor da p2:"))
p3=int(input("insira o valor da p3:"))
p4=int(input("insira o valor da p4:"))

m=(p1*1+p2*2+p3*3+p4*4 )/ 10


print(round(m,2))
-- EXECUTION TIME:
0.150401
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    p2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:40:36) 
-- CODE:
p1=int(input("insira o valor da p1:"))
p2=int(input("insira o valor da p2:"))
p3=int(input("insira o valor da p3:"))
p4=int(input("insira o valor da p4:"))

m=(p1*1+p2*2+p3*3+p4*4 )/ 10


print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    p2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:44) 
-- CODE:
p1=int(input("insira o valor da p1:"))
p2=int(input("insira o valor da p2:"))
p3=int(input("insira o valor da p3:"))
p4=int(input("insira o valor da p4:"))

m=(p1*1+p2*2+p3*3+p4*4 )/ 10


print(round(m,2))
-- EXECUTION TIME:
0.197859
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    p2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:50:01) 
-- CODE:
p1=int(input("insira o valor da p1:"))
p2=int(input("insira o valor da p2:"))
p3=int(input("insira o valor da p3:"))
p4=int(input("insira o valor da p4:"))

m=(p1*1+p2*2+p3*3+p4*4 )/ 10


print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    p2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:50:13) 
-- CODE:
p1=int(input("insira o valor da p1:"))
p2=int(input("insira o valor da p2:"))
p3=int(input("insira o valor da p3:"))
p4=int(input("insira o valor da p4:"))

m=(p1*1+p2*2+p3*3+p4*4 )/ 10


print(round(m,2))
-- EXECUTION TIME:
0.142109
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    p2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:51:07) 
-- CODE:
p1=float(input("insira o valor da p1:"))
p2=float(input("insira o valor da p2:"))
p3=float(input("insira o valor da p3:"))
p4=float(input("insira o valor da p4:"))

m=(p1*1+p2*2+p3*3+p4*4 )/ 10


print(round(m,2))
-- EXECUTION TIME:
0.182761
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
